--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         /* Background image for the body */
         body {
-            background-image: url('images/download.jpg');
+            background-image: url('images/black-abstract-background-web-sites-260nw-1500865031.webp');
             background-size: cover;
             background-position: center;
             background-attachment: fixed; /* Ensures the background image remains fixed as the user scrolls */
@@ -45,7 +45,17 @@
         }
 
         .navbar {
-            background-color: rgba(255, 255, 255, 0.9) !important; /* Semi-transparent white */
+            background-color: rgba(0, 0, 0, 0.8) !important; /* Semi-transparent black */
+        }
+
+        .navbar .nav-link,
+        .navbar .navbar-brand {
+            color: white !important;
+        }
+
+        .navbar .nav-link:hover,
+        .navbar .navbar-brand:hover {
+            color: #ff69b4 !important; /* Pink color on hover */
         }
 
         .footer {
